--- a/Project.toml
+++ b/Project.toml
@@ -8,9 +8,11 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
+Juleanita = "ee18b94d-4c1a-4e9f-a3c9-5db9bff1343f"
 LegendDSP = "e6d7a502-be5c-5049-a927-8d60e566555d"
 LegendDataManagement = "9feedd95-f0e0-423f-a8dc-de0970eae6b3"
 LegendHDF5IO = "c9265ca6-b027-5446-b1a4-febfa8dd10b0"
+LegendMakie = "ce9a434a-d062-4f11-9371-3059ddb1c48a"
 LegendSpecFits = "18221496-77af-46cf-bab8-820da09f7f97"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
